<resources>
    <string name="app_name">SeoulForVeggie</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--    signup activity-->
    <string name="signup_title">Seoul for Veggie\nSign up</string>
    <string name="signup_nickname">Nickname</string>
    <string name="signup_optional">Optional</string>
    <string name="signup_nationality">Nationality</string>
    <string name="signup_hidden">Please enter a Nickname.</string>
    <string name="signup_content_back">back</string>
    <string name="signup_content_duplicate">duplicate check</string>


</resources>