<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.activity.SignUpActivity">

        <!-- 상단바 -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout1"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageButton"
                android:contentDescription="@string/signup_content_back"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="@dimen/layout_margin_start"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_arrow_back" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- 회원가입 -->

        <TextView
            android:id="@+id/signUpTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_34"
            android:layout_marginStart="@dimen/layout_margin_start"
            android:fontFamily="@font/suit_extrabold"
            android:text="@string/signup_title"
            android:textSize="@dimen/sign_up_font_large"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout1" />

        <TextView
            android:id="@+id/nickname_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_48"
            android:layout_marginStart="@dimen/layout_margin_start"
            android:fontFamily="@font/suit_bold"
            android:text="@string/signup_nickname"
            android:textColor="@color/black_500"
            android:textSize="@dimen/sign_up_font_medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signUpTitle" />

        <EditText
            android:id="@+id/enterNick"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginTop="@dimen/font_size_16"
            android:layout_marginStart="@dimen/layout_margin_start"
            android:autofillHints="@string/signup_nickname"
            android:ems="10"
            android:background="@null"
            android:hint="@string/signup_hidden"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:padding="10dp"
            android:textColor="@color/gray_600"
            android:textSize="@dimen/sign_up_font_hidden"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nickname_title"
            tools:ignore="TouchTargetSizeCheck" />

        <ImageView
            android:id="@+id/duplicateCheck"
            android:contentDescription="@string/signup_content_duplicate"
            android:layout_width="110dp"
            android:layout_height="30dp"
            android:src="@drawable/btn_duplicate_check"
            android:layout_marginEnd="@dimen/layout_margin_start"
            app:layout_constraintBottom_toBottomOf="@+id/enterNick"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/enterNick" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="@dimen/layout_margin_start"
            android:layout_marginEnd="@dimen/layout_margin_start"
            android:background="@drawable/bg_under_line_gray"
            app:layout_constraintTop_toBottomOf="@+id/enterNick" />

        <TextView
            android:id="@+id/optional_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup_optional"
            android:textColor="@color/gray_500"
            android:layout_marginStart="@dimen/layout_margin_start"
            android:layout_marginTop="@dimen/size_40"
            android:textSize="@dimen/sign_up_font_small"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" />

        <TextView
            android:id="@+id/nationality_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_2"
            android:layout_marginStart="@dimen/layout_margin_start"
            android:fontFamily="@font/suit_bold"
            android:text="@string/signup_nationality"
            android:textColor="@color/black_500"
            android:textSize="@dimen/sign_up_font_medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/optional_title" />

        <TextView
            android:id="@+id/my_country"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginStart="@dimen/layout_margin_start"
            android:autofillHints="@string/signup_nickname"
            android:text=""
            android:padding="10dp"
            android:textColor="@color/gray_600"
            android:textSize="@dimen/sign_up_font_hidden"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nationality_title"
            tools:ignore="TouchTargetSizeCheck" />

        <Spinner
            android:id="@+id/countrySpinner"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            app:layout_constraintTop_toBottomOf="@+id/nationality_title" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="@dimen/layout_margin_start"
            android:layout_marginEnd="@dimen/layout_margin_start"
            android:background="@drawable/bg_under_line_gray"
            app:layout_constraintTop_toBottomOf="@+id/countrySpinner" />




    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>